Fixed section spacing error

--- a/src/components/section/section.scss
+++ b/src/components/section/section.scss
@@ -1,6 +1,5 @@
-.ddc_pb_section {    
-    // min-width: 20em;
-    // margin-bottom: 3em;
+.ddc_pb_section {
+    margin-bottom: 2em;
 }
 .ddc_pb_folder-section {
 
